Query Applicant first before fetch all, add 404 response
