# src/routes/applicant-routes/applicant-parents.ts
@@ -6,6 +6,17 @@ const prisma = new PrismaClient()
 
 // GET: Fetch all applicant's parents
 router.get('/', async (req: Request, res: Response) => {
+  const applicant = await prisma.applicant.findUnique({
+    where: {
+      id: Number(req.params.applicantId)
+    }
+  })
+
+  if (!applicant) {
+    res.sendStatus(404)
+    return
+  }
+
   const applicantParents = await prisma.applicantParent.findMany({
     where: {
       applicantId: Number(req.params.applicantId)
