# swagger/applicant-defs/applicant-parent.yaml
@@ -70,6 +70,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ApplicantParent'
+        404:
+          description: Not found
     post:
       tags:
         - Applicant Parents
@@ -93,6 +95,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApplicantParent'
+        404:
+          description: Not found
   /applicants/{applicantId}/parents/{parentId}:
     get:
       tags:
